--- a/page2.html
+++ b/page2.html
@@ -222,6 +222,10 @@
         });
         // next and previous button in slider
         $('.owl-next,.owl-prev').find('span').empty();
+        $('.owl-theme .owl-nav').css({
+            "text-align": "right",
+            "margin-right": "10px"
+        })
         $('.owl-next').find('span').append('<img src="images/next.svg" height="14px">');
         $('.owl-prev').find('span').append('<img src="images/back.svg" height="14px">');
         $('.owl-next,.owl-prev').find('span').addClass('btn btn-sm bg-blue');
