--- a/page2.html
+++ b/page2.html
@@ -226,9 +226,9 @@
             "text-align": "right",
             "margin-right": "10px"
         })
-        $('.owl-next').find('span').append('<img src="images/next.svg" height="14px">');
-        $('.owl-prev').find('span').append('<img src="images/back.svg" height="14px">');
-        $('.owl-next,.owl-prev').find('span').addClass('btn btn-sm bg-blue');
+        $('.owl-next').find('span').append('<img src="images/next.svg" height="12px">');
+        $('.owl-prev').find('span').append('<img src="images/back.svg" height="12px">');
+        $('.owl-next,.owl-prev').find('span').addClass('btn btn-sm p-0 px-1 bg-blue');
         // next and previous button in slider
     </script>
     <!-- slider js code over -->
