--- a/page2.html
+++ b/page2.html
@@ -221,6 +221,8 @@
             }
         });
         // next and previous button in slider
+        $('.owl-theme .owl-nav').prepend('<span class="mx-2 text-dark">Stran 1 od 2</span>')
+
         $('.owl-next,.owl-prev').find('span').empty();
         $('.owl-theme .owl-nav').css({
             "text-align": "right",
