--- a/page2.html
+++ b/page2.html
@@ -91,7 +91,7 @@
                                     Z misko nastavi pozicijo in velikost slike
                                 </div>
                                 <div>
-                                    <img src="images/ganesha.jpg" alt="image" class="img-fluid">
+                                    <img src="images/abc.jpg" alt="image" class="img-fluid">
                                 </div>
                                 <input type="button" class="mt-3 px-5 btn bg-blue text-white" value="Potrdi">
                                 </div>
@@ -141,7 +141,7 @@
                                         <input type="text" id="demo" class="demo" value="#9acb34">
                                     </div>
                                     <div class="col justify-content-center d-flex">
-                                        <div class="preview-img-rounde" style="background-image: url(images/ganesha.jpg);">
+                                        <div class="preview-img-rounde" style="background-image: url(images/abc.jpg);">
                                         </div>
                                     </div>
                                 </div>
