--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <div class="rounded-circle" style="width: 35px;height:35px;background-color: orange;"></div>
+                                    <div class="rounded-circle" style="width: 35px;height:35px;background-color: lightgray;background-image: url('images/abc.jpg');background-position: center;background-repeat: no-repeat;background-size: cover;"></div>
                                 </td>
                                 <td class="text-left w-50">Ura opis</td>
                                 <td class="text-left">
